refactor: Refactorisation de la méthode calculSalaire. Création d'une méthode calculBonusSalaire dans Employe et une méthode abstract calculBonus qui calcul le bonus salaire